Refactored the framework

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,2 +1,5 @@
-url=http://localhost:3000/
-#url=https://pp-admin@premium@manage.release.premiumparking.com/
+#url=https://manage.staging.premiumparking.com/
+#url=https://pp-admin:premium@manage.release.premiumparking.com/
+url=https://manage.premiumparking.com/
+username=venu.t@comakeit.com
+password=kruthi@01
