Added mass import script

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,7 @@
 #url=https://manage.staging.premiumparking.com/
 #url=https://pp-admin:premium@manage.release.premiumparking.com/
-url=https://manage.premiumparking.com/
+url=https://manage.release.premiumparking.com/
+url_new_profile=https://manage.release.premiumparking.com/profiles/
+url_businessaccounts=https://manage.release.premiumparking.com/businessaccounts
 username=venu.t@comakeit.com
 password=kruthi@01
