Admiral Enforcement test cases added

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,7 +1,19 @@
-#url=https://manage.staging.premiumparking.com/
-#url=https://pp-admin:premium@manage.release.premiumparking.com/
+#Release
 url=https://manage.release.premiumparking.com/
 url_new_profile=https://manage.release.premiumparking.com/profiles/
 url_businessaccounts=https://manage.release.premiumparking.com/businessaccounts
-username=venu.t@comakeit.com
-password=kruthi@01
+username=
+password=
+
+#Production
+#url=https://manage.premiumparking.com/
+#url_new_profile=https://manage.premiumparking.com/profiles/
+#url_businessaccounts=https://manage.premiumparking.com/businessaccounts
+#username=bbodensteiner@premiumparking.com
+#password=BreBod7219
+
+
+# Production
+#adm_url=https://enforcement.admiralenforcement.com/admin/sign_in
+#adm_username=admin@pp.com
+#adm_password=CmaL##vol16B*q6
