Added location test cases

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,9 +1,13 @@
+#Chrome, Firefox , Edge
+browser=Edge
+headless=true 
+
 #Release
 url=https://manage.release.premiumparking.com/
 url_new_profile=https://manage.release.premiumparking.com/profiles/
 url_businessaccounts=https://manage.release.premiumparking.com/businessaccounts
-username=
-password=
+username=venu.t@comakeit.com
+password=kruthi@01
 
 #Production
 #url=https://manage.premiumparking.com/
