Test cases for spa

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -8,6 +8,9 @@ url_new_profile=https://manage.release.premiumparking.com/profiles/
 url_businessaccounts=https://manage.release.premiumparking.com/businessaccounts
 username=venu.t@comakeit.com
 password=kruthi@01
+spa_url = https://spa.release.premiumparking.com/
+spa_username = testpp01@yopmail.com
+spa_password = Test@123
 
 #Production
 #url=https://manage.premiumparking.com/
