Refactored OD file names

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,14 +1,17 @@
 #Chrome, Firefox , Edge
-browser=Edge
-headless=true 
+browser=Chrome
+headless=false 
 
 #Release
-url=https://manage.release.premiumparking.com/
-url_new_profile=https://manage.release.premiumparking.com/profiles/
-url_businessaccounts=https://manage.release.premiumparking.com/businessaccounts
-username=venu.t@comakeit.com
-password=kruthi@01
+#url=https://manage.release.premiumparking.com/
+#url_new_profile=https://manage.release.premiumparking.com/profiles/
+#url_businessaccounts=https://manage.release.premiumparking.com/businessaccounts
+#username=venu.t@comakeit.com
+#password=kruthi@01
 
+od_url=https://manage.parkos.gq/
+od_username=cmi-admin@comakeit.com
+od_password=321premium
 #Production
 #url=https://manage.premiumparking.com/
 #url_new_profile=https://manage.premiumparking.com/profiles/
