Added test case for sessions(SPA)

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -12,6 +12,10 @@ headless=false
 od_url=https://manage.parkos.gq/
 od_username=cmi-admin@comakeit.com
 od_password=321premium
+spa_url = https://spa.release.premiumparking.com
+spa_username = testpp01@yopmail.com
+spa_password = Test@123
+
 #Production
 #url=https://manage.premiumparking.com/
 #url_new_profile=https://manage.premiumparking.com/profiles/
