updated mass import script

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -9,15 +9,17 @@ headless=false
 #username=venu.t@comakeit.com
 #password=kruthi@01
 
-od_url=https://manage.parkos.gq/
-od_username=cmi-admin@comakeit.com
-od_password=321premium
+# AWS 
+#od_url=https://manage.parkos.gq/
+#od_username=cmi-admin@comakeit.com
+#od_password=321premium
+
 #Production
-#url=https://manage.premiumparking.com/
-#url_new_profile=https://manage.premiumparking.com/profiles/
-#url_businessaccounts=https://manage.premiumparking.com/businessaccounts
-#username=bbodensteiner@premiumparking.com
-#password=BreBod7219
+od_url=https://manage.premiumparking.com/
+url_new_profile=https://manage.premiumparking.com/profiles/
+url_businessaccounts=https://manage.premiumparking.com/businessaccounts
+od_username=bbodensteiner@premiumparking.com
+od_password=BreBod7219
 
 
 # Production
