--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,7 +2,7 @@
 browser=Edge
 headless=false 
 
-#Release
+#OD - Release
 #url=https://manage.release.premiumparking.com/
 #url_new_profile=https://manage.release.premiumparking.com/profiles/
 #url_businessaccounts=https://manage.release.premiumparking.com/businessaccounts
@@ -10,13 +10,20 @@ headless=false
 #password=kruthi@01
 
 
-#SPA
+#SPA - Release
 spa_url = https://spa.release.premiumparking.com
-spa_username = testpp01@yopmail.com
-spa_password = Test@123
+#spa_username = testpp01@yopmail.com
+#spa_password = Test@123
+spa_username = premiumparkingqa@gmail.com
+spa_password = 9010030500
 
 
-# AWS 
+#SPA - AWS
+#spa_url = https://parkos.gq/
+#spa_username = premiumparkingqa@gmail.com
+#spa_password = 9010030500
+
+#OD - AWS 
 od_url=https://manage.parkos.gq/
 od_username=cmi-admin@comakeit.com
 od_password=321premium
