Added spa test cases

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 #Chrome, Firefox , Edge
-browser=Edge
-headless=false 
+browser=Chrome
+headless=true 
 
 #OD - Release
 #url=https://manage.release.premiumparking.com/
