--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,12 +2,7 @@
 browser=Chrome
 headless=true 
 
-#OD - Release
-#url=https://manage.release.premiumparking.com/
-#url_new_profile=https://manage.release.premiumparking.com/profiles/
-#url_businessaccounts=https://manage.release.premiumparking.com/businessaccounts
-#username=venu.t@comakeit.com
-#password=kruthi@01
+
 
 
 #SPA - Release
@@ -23,18 +18,23 @@ spa_password = 9010030500
 #spa_username = premiumparkingqa@gmail.com
 #spa_password = 9010030500
 
+#OD - Staging 
+od_url=https://manage.staging.premiumparking.com/
+od_username=venu.t@comakeit.com
+od_password=kruthi@01
+
 #OD - AWS 
-od_url=https://manage.parkos.gq/
-od_username=cmi-admin@comakeit.com
-od_password=321premium
+#od_url=https://manage.parkos.gq/
+#od_username=cmi-admin@comakeit.com
+#od_password=321premium
 
 
 #Production
-od_url=https://manage.premiumparking.com/
-url_new_profile=https://manage.premiumparking.com/profiles/
-url_businessaccounts=https://manage.premiumparking.com/businessaccounts
-od_username=bbodensteiner@premiumparking.com
-od_password=BreBod7219
+#od_url=https://manage.premiumparking.com/
+#url_new_profile=https://manage.premiumparking.com/profiles/
+#url_businessaccounts=https://manage.premiumparking.com/businessaccounts
+#od_username=bbodensteiner@premiumparking.com
+#od_password=BreBod7219
 
 
 # Admiral Enforcement Production
