added textpay test cases

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,8 +2,8 @@
 browser=Chrome
 headless=true 
 
-
-
+#TextPay - Staging
+textpay_url=https://textpay.staging.premiumparking.com/
 
 #SPA - Release
 spa_url = https://spa.release.premiumparking.com
