--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -14,8 +14,8 @@ headless=true
 spa_url = https://spa.release.premiumparking.com
 #spa_username = testpp01@yopmail.com
 #spa_password = Test@123
-spa_username = premiumparkingqa@gmail.com
-spa_password = 9010030500
+spa_username = testpp01@yopmail.com
+spa_password = Test@123
 
 
 #SPA - AWS
