Added few test cases for reservations flow

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -9,8 +9,8 @@ textpay_url=https://textpay.staging.premiumparking.com/
 spa_url = https://spa.release.premiumparking.com
 #spa_username = testpp01@yopmail.com
 #spa_password = Test@123
-spa_username = testpp01@yopmail.com
-spa_password = Test@123
+spa_username = premiumparkingqa@gmail.com
+spa_password = 9010030500
 
 
 #SPA - AWS
