--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,12 +6,18 @@ headless=true
 textpay_url=https://textpay.staging.premiumparking.com/
 
 #SPA - Release
-spa_url = https://spa.release.premiumparking.com
+#spa_url = https://spa.release.premiumparking.com
+#spa_username = testpp01@yopmail.com
+#spa_password = Test@123
+#spa_username = premiumparkingqa@gmail.com
+#spa_password = 9010030500
+
+#SPA - Staging
+spa_url = https://spa.staging.premiumparking.com
 #spa_username = testpp01@yopmail.com
 #spa_password = Test@123
 spa_username = premiumparkingqa@gmail.com
 spa_password = 9010030500
-
 
 #SPA - AWS
 #spa_url = https://parkos.gq/
