Fixed textpay code issue

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,7 +3,10 @@ browser=Chrome
 headless=true 
 
 #TextPay - Staging
-textpay_url=https://textpay.staging.premiumparking.com/
+#textpay_url=https://textpay.staging.premiumparking.com/
+
+#TextPay - Staging
+textpay_url=https://textpay.parkos.gq/
 
 #SPA - Release
 #spa_url = https://spa.release.premiumparking.com
@@ -13,14 +16,14 @@ textpay_url=https://textpay.staging.premiumparking.com/
 #spa_password = 9010030500
 
 #SPA - Staging
-spa_url = https://spa.staging.premiumparking.com
+#spa_url = https://spa.staging.premiumparking.com
 #spa_username = testpp01@yopmail.com
 #spa_password = Test@123
 spa_username = premiumparkingqa@gmail.com
 spa_password = 9010030500
 
 #SPA - AWS
-#spa_url = https://parkos.gq/
+spa_url = https://spa.parkos.gq
 #spa_username = premiumparkingqa@gmail.com
 #spa_password = 9010030500
 
