Added test cases for creating cash deposit, color themes, parking operator, static page group, contact reasons, support articles in operator dashboard

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -33,9 +33,9 @@ od_username=venu.t@comakeit.com
 od_password=kruthi@01
 
 #OD - AWS 
-#od_url=https://manage.parkos.gq/
-#od_username=cmi-admin@comakeit.com
-#od_password=321premium
+#od_url=https://manage.dev.parkos.gq/
+#od_username=pavanprasad.v@comakeit.com
+#od_password=Test@123
 
 
 #Production
