Modified constants and xml files

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,10 +3,10 @@ browser=Chrome
 headless=true
 
 #TextPay - Staging
-#textpay_url=https://textpay.staging.premiumparking.com/
+textpay_url=https://textpay.staging.premiumparking.com/
 
-#TextPay - Staging
-textpay_url=https://textpay.parkos.gq/
+#TextPay - AWS Dev
+#textpay_url=https://textpay.dev.premiumparking.com/
 
 #SPA - Release
 #spa_url = https://spa.release.premiumparking.com
@@ -19,21 +19,21 @@ textpay_url=https://textpay.parkos.gq/
 #spa_url = https://spa.staging.premiumparking.com
 #spa_username = testpp01@yopmail.com
 #spa_password = Test@123
-spa_username = premiumparkingqa@gmail.com
-spa_password = 9010030500
-
-#SPA - AWS
-spa_url = https://spa.parkos.gq
 #spa_username = premiumparkingqa@gmail.com
 #spa_password = 9010030500
 
+#SPA - AWS
+spa_url = https://spa.dev.premiumparking.com/
+spa_username = premiumparkingqa@gmail.com
+spa_password = 9010030500
+
 #OD - Staging 
-od_url=https://manage.staging.premiumparking.com/
+#od_url=https://manage.staging.premiumparking.com/
 od_username=venu.t@comakeit.com
 od_password=kruthi@01
 
-#OD - AWS 
-#od_url=https://manage.dev.parkos.gq/
+#OD - AWS Dev
+od_url=https://manage.prod.premiumparking.com
 #od_username=pavanprasad.v@comakeit.com
 #od_password=Test@123
 
@@ -48,6 +48,6 @@ od_password=kruthi@01
 
 
 # Admiral Enforcement Production
-adm_url=https://enforcement.admiralenforcement.com/admin/sign_in
-adm_username=admin@pp.com
-adm_password=CmaL##vol16B*q6
+#adm_url=https://enforcement.admiralenforcement.com/admin/sign_in
+#adm_username=admin@pp.com
+#adm_password=CmaL##vol16B*q6
