Changed chrome driver options

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 #Chrome, Firefox , Edge
 browser=Chrome
-headless=true
+headless=false
 
 #TextPay - Staging
 textpay_url=https://textpay.staging.premiumparking.com/
