pre-prod env details updated in .properties file

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -23,9 +23,9 @@ textpay_url=https://textpay.staging.premiumparking.com/
 #spa_password = 9010030500
 
 #SPA - AWS
-spa_url = https://spa.dev.premiumparking.com/
-spa_username = premiumparkingqa@gmail.com
-spa_password = 9010030500
+spa_url = https://spa.prod.premiumparking.com/
+spa_username = testpp_prod@yopmail.com
+spa_password = 123456
 
 #OD - Staging 
 #od_url=https://manage.staging.premiumparking.com/
