modified textpay test cases

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,6 +4,7 @@ headless=false
 
 #TextPay - Staging
 textpay_url=https://textpay.staging.premiumparking.com/
+#textpay_url=https://textpay.premiumparking.com/
 
 #TextPay - AWS Dev
 #textpay_url=https://textpay.dev.premiumparking.com/
