modified production mass import scripts

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -34,15 +34,15 @@ od_username=venu.t@comakeit.com
 od_password=kruthi@01
 
 #OD - AWS Dev
-od_url=https://manage.prod.premiumparking.com
+#od_url=https://manage.prod.premiumparking.com
 #od_username=pavanprasad.v@comakeit.com
 #od_password=Test@123
 
 
 #Production
-#od_url=https://manage.premiumparking.com/
-#url_new_profile=https://manage.premiumparking.com/profiles/
-#url_businessaccounts=https://manage.premiumparking.com/businessaccounts
+od_url=https://manage.premiumparking.com/
+url_new_profile=https://manage.premiumparking.com/profiles/
+url_businessaccounts=https://manage.premiumparking.com/businessaccounts
 
 #od_username=bbodensteiner@premiumparking.com
 #od_password=BreBod7219
