--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,21 @@
 		</dependency>
 
 
+		<!-- Other dependencies -->
+
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.14.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.14.1</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
