added hotel test scripts

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,6 +2,9 @@
 browser=Chrome
 headless=false
 
+#windows, ubuntu
+os=windows
+
 #TextPay - Staging
 textpay_url=https://textpay.staging.premiumparking.com/
 #textpay_url=https://textpay.premiumparking.com/
