added textpay sanity test cases

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -32,7 +32,7 @@ spa_username = testpp_prod@yopmail.com
 spa_password = 123456
 
 #OD - Staging 
-#od_url=https://manage.staging.premiumparking.com/
+od_url=https://manage.staging.premiumparking.com/
 od_username=venu.t@comakeit.com
 od_password=kruthi@01
 
@@ -43,7 +43,7 @@ od_password=kruthi@01
 
 
 #Production
-od_url=https://manage.premiumparking.com/
+#od_url=https://manage.premiumparking.com/
 url_new_profile=https://manage.premiumparking.com/profiles/
 url_businessaccounts=https://manage.premiumparking.com/businessaccounts
 
