--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>core.automation.ui</groupId>
 	<artifactId>core.automation.ui</artifactId>
@@ -7,11 +9,13 @@
 		<maven.compiler.source>1.7</maven.compiler.source>
 		<maven.compiler.target>17</maven.compiler.target>
 	</properties>
-	<name>od.automation</name>
+	<name>ui.automation</name>
 
-	<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+	<!--
+	https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 	<dependencies>
-		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+		<!--
+		https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
@@ -64,11 +68,12 @@
 		</dependency>
 
 
-		<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+		<!--
+		https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
 		<dependency>
 			<groupId>io.github.bonigarcia</groupId>
 			<artifactId>webdrivermanager</artifactId>
-			<version>5.3.0</version>
+			<version>5.6.3</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
@@ -124,15 +129,18 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19.1</version>
+				<version>3.2.5</version>
 
 				<configuration>
 
 					<suiteXmlFiles>
-						<suiteXmlFile>testng.xml</suiteXmlFile>
+						<suiteXmlFile>Textpay_Smoke.xml</suiteXmlFile>
 
 					</suiteXmlFiles>
 					<testFailureIgnore>false</testFailureIgnore>
+					<includes>
+						<include>**/TextPay_Sessions_Testcases.class</include>
+					</includes>
 
 				</configuration>
 			</plugin>
@@ -141,17 +149,24 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.10.1</version>
+				<configuration>
+					<source>17</source>
+					<target>17</target>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<!-- I don't specify version at all (Spring Boot can autoconfigure plugin version) -->
+				<!-- I don't specify version at all (Spring Boot can
+				autoconfigure plugin version) -->
 				<executions>
 					<execution>
-						<!-- changed <id> to <phase>, but I don't know whether it's important or not. -->
+						<!-- changed <id> to <phase>, but I don't know whether
+						it's important or not. -->
 						<phase>integration-test</phase>
 						<goals></goals>
-						<!-- ... no changes here: the same as in the question ... -->
+						<!-- ... no changes here: the same as in the question
+						... -->
 					</execution>
 				</executions>
 			</plugin>
