added regular space sanity test cases

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 #Chrome, Firefox , Edge
 browser=Chrome
-headless=true
+headless=false
 
 #windows, ubuntu
 os=windows
@@ -55,3 +55,8 @@ url_businessaccounts=https://manage.premiumparking.com/businessaccounts
 #adm_url=https://enforcement.admiralenforcement.com/admin/sign_in
 #adm_username=admin@pp.com
 #adm_password=CmaL##vol16B*q6
+
+
+# yopmail
+yopmail_url = https://yopmail.com/en/
+
