--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,13 +1,4 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: Test Automation with Maven
-
+name: TextPay Test Automation
 on:
   push:
     branches: [ "main" ]
@@ -27,4 +18,11 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn clean test -DsuiteXmlFile=Textpay_Smoke.xml
+      run: mvn clean test -DsuiteXmlFile=Textpay_Smoke.xml; exit 0
+    - name: echo date
+      run: echo ${{ github.event.inputs.date }}
+    - name: Upload Test Report
+      uses: actions/upload-artifact@v2
+      with:
+        name: test-report
+        path: TestResults/${{ github.event_name == 'workflow_dispatch' && github.event.inputs.date }}
