--- a/.github/workflows/textpay-automation.yml
+++ b/.github/workflows/textpay-automation.yml
@@ -30,9 +30,39 @@ jobs:
     - name: Zip current test report
       id: zip-test
       run: |
-        zip -r test-report-${{ steps.set-date.outputs.today }}.zip ./TestResults/${{ steps.set-date.outputs.today }}
+        cd ./TestResults
+        zip -r test-report-${{ steps.set-date.outputs.today }}.zip ./${{ steps.set-date.outputs.today }}
       shell: bash
-      
+    
+    - name: Send email with SparkPost
+      env:
+        SPARKPOST_API_KEY: ${{ secrets.SPARKPOST_API_KEY }}
+      run: |
+        curl -X POST \
+        https://api.sparkpost.com/api/v1/transmissions \
+        -H "Authorization: $SPARKPOST_API_KEY" \
+        -H 'Content-Type: application/json' \
+        -d '{
+          "options": {
+            "sandbox": false
+          },
+          "content": {
+            "from": "sivaaws0@gmail.com",
+            "subject": "Test Report for ${{ steps.set-date.outputs.today }}",
+            "html": "<html><body><p>The test report for ${{ steps.set-date.outputs.today }} is attached.</p></body></html>"
+          },
+          "recipients": [
+            {"address": {"email": "sivakumar.kurnool@xebia.com"}}
+          ],
+          "attachments": [
+            {
+              "name": "test-report-${{ steps.set-date.outputs.today }}.zip",
+              "type": "application/zip",
+              "data": "$(base64 -w 0 test-report-${{ steps.set-date.outputs.today }}.zip)"
+            }
+          ]
+        }'
+
     - name: Upload Test Report
       uses: actions/upload-artifact@v2
       with:
