--- a/.github/workflows/textpay-automation.yml
+++ b/.github/workflows/textpay-automation.yml
@@ -27,18 +27,18 @@ jobs:
       run: echo "::set-output name=today::$(date +'%Y-%m-%d')"
       shell: bash
 
-    - name: Zip current test report
-      id: zip-test
-      run: |
-        cd ./TestResults
-        zip -r test-report-${{ steps.set-date.outputs.today }}.zip ./${{ steps.set-date.outputs.today }}
-      shell: bash
+    # - name: Zip current test report
+    #   id: zip-test
+    #   run: |
+    #     cd ./TestResults
+    #     zip -r /test-report-${{ steps.set-date.outputs.today }}.zip ./${{ steps.set-date.outputs.today }}
+    #   shell: bash
 
     - name: Upload Test Report
       uses: actions/upload-artifact@v2
       with:
-        name: test-report
-        path: test-report-${{ steps.set-date.outputs.today }}.zip
+        name: test-report-${{ steps.set-date.outputs.today }}
+        path: ./TestResults/${{ steps.set-date.outputs.today }}
 
     - name: Send email with SparkPost
       env:
