--- a/.github/workflows/textpay-automation.yml
+++ b/.github/workflows/textpay-automation.yml
@@ -70,7 +70,7 @@ jobs:
             {
               "name": "test-report-${{ steps.set-date.outputs.today }}.zip",
               "type": "application/zip",
-              "data": "$(base64 -w 0 ./test-report-${{ steps.set-date.outputs.today }}.zip)"
+              "data": "$(base64 -w 0 test-report-${{ steps.set-date.outputs.today }}.zip)"
             }
           ]
         }'
