--- a/.github/workflows/textpay-automation.yml
+++ b/.github/workflows/textpay-automation.yml
@@ -30,8 +30,7 @@ jobs:
     - name: Zip current test report
       id: zip-test
       run: |
-        cd ./TestResults
-        zip -r ../test-report-${{ steps.set-date.outputs.today }}.zip ./${{ steps.set-date.outputs.today }}
+        zip -r test-report-${{ steps.set-date.outputs.today }}.zip TestResults/${{ steps.set-date.outputs.today }}
       shell: bash
 
     - name: Echo ZIP
@@ -63,7 +62,6 @@ jobs:
           },
           "recipients": [
             {"address": {"email": "sivakumar.kurnool@xebia.com"}}
-            {"address": {"email": "sk800489@gmail.com"}},
             {"address": {"email": "venu.thota@xebia.com"}},
           ],
           "attachments": [
