--- a/.github/workflows/textpay-automation.yml
+++ b/.github/workflows/textpay-automation.yml
@@ -27,7 +27,7 @@ jobs:
         shell: bash
 
       - name: Change PNG Paths
-        run: sed -i 's|file:////home/runner/work/core_UI_Automation/core_UI_Automation//TestResults//2024-02-07//\([^"]*\)|./\1|g' TestResults/${{ env.DATE_STR }}/*.html
+        run: sed -i 's|file:////home/runner/work/core_UI_Automation/core_UI_Automation//TestResults//${{ env.DATE_STR }}//\([^"]*\)|./\1|g' TestResults/${{ env.DATE_STR }}/*.html
 
       - name: Zip current test report
         id: zip-test
