--- a/.github/workflows/textpay-automation.yml
+++ b/.github/workflows/textpay-automation.yml
@@ -27,7 +27,9 @@ jobs:
         shell: bash
 
       - name: Change PNG Paths
-        run: sed -i 's|file:////home/runner/work/core_UI_Automation/core_UI_Automation//TestResults//${{ env.DATE_STR }}//\([^"]*\)|./\1|g' TestResults/${{ env.DATE_STR }}/*.html
+        run: |
+          sed -i 's|file:////home/runner/work/core_UI_Automation/core_UI_Automation//TestResults//${{ env.DATE_STR }}//\([^"]*\)|./\1|g' TestResults/${{ env.DATE_STR }}/*.html
+          sed -i 's|home/runner/work/core_UI_Automation/core_UI_Automation//TestResults//${{ env.DATE_STR }}//\([^"]*\)|./\1|g' TestResults/${{ env.DATE_STR }}/*.png
 
       - name: Zip current test report
         id: zip-test
