--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,7 +1,7 @@
 #Chrome, Firefox , Edge
 browser=Chrome
 headless=true
-verifyEmail=false
+yopmail=false
 
 #windows, ubuntu
 os=windows
@@ -60,4 +60,9 @@ url_businessaccounts=https://manage.premiumparking.com/businessaccounts
 
 # yopmail
 yopmail_url = https://yopmail.com/en/
+
+# mailosaur EMAIL
+mailosaur_apiKey = UoL3Rd2pVnIZCudrPzy0O3ALSj6PnGxw
+mailosaur_serverId = nq4dqax8
+mailosaur_serverDomain = nq4dqax8.mailosaur.net
 
