--- a/.github/workflows/textpay-automation.yml
+++ b/.github/workflows/textpay-automation.yml
@@ -17,35 +17,35 @@ jobs:
           distribution: "temurin"
           cache: maven
 
-      - name: Build with Maven
-        continue-on-error: true
-        run: mvn clean test -DsuiteXmlFile=Textpay_Smoke.xml | tee mvn_output.txt
+      # - name: Build with Maven
+      #   continue-on-error: true
+      #   run: mvn clean test -DsuiteXmlFile=Textpay_Smoke.xml | tee mvn_output.txt
 
-      - name: Set current date
-        id: set-date
-        run: echo "DATE_STR=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
-        shell: bash
+      # - name: Set current date
+      #   id: set-date
+      #   run: echo "DATE_STR=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
+      #   shell: bash
 
-      - name: Change PNG Paths
-        run: |
-          sed -i 's|file:////home/runner/work/core_UI_Automation/core_UI_Automation//TestResults//${{ env.DATE_STR }}//\([^"]*\)|./\1|g' TestResults/${{ env.DATE_STR }}/*.html
-          sed -i 's|/home/runner/work/core_UI_Automation/core_UI_Automation//TestResults//${{ env.DATE_STR }}//\([^"]*\)|./\1|g' TestResults/${{ env.DATE_STR }}/*.html
+      # - name: Change PNG Paths
+      #   run: |
+      #     sed -i 's|file:////home/runner/work/core_UI_Automation/core_UI_Automation//TestResults//${{ env.DATE_STR }}//\([^"]*\)|./\1|g' TestResults/${{ env.DATE_STR }}/*.html
+      #     sed -i 's|/home/runner/work/core_UI_Automation/core_UI_Automation//TestResults//${{ env.DATE_STR }}//\([^"]*\)|./\1|g' TestResults/${{ env.DATE_STR }}/*.html
 
-      - name: Zip current test report
-        id: zip-test
-        run: |
-          zip -r test-report-${{ env.DATE_STR }}.zip TestResults/${{ env.DATE_STR }}
-        shell: bash
+      # - name: Zip current test report
+      #   id: zip-test
+      #   run: |
+      #     zip -r test-report-${{ env.DATE_STR }}.zip TestResults/${{ env.DATE_STR }}
+      #   shell: bash
 
-      - name: Echo ZIP
-        run: |
-          echo "echoing where is zip file"
-          ls
-      - name: Upload Test Report
-        uses: actions/upload-artifact@v2
-        with:
-          name: test-report-${{ env.DATE_STR }}
-          path: ./TestResults/${{ env.DATE_STR }}
+      # - name: Echo ZIP
+      #   run: |
+      #     echo "echoing where is zip file"
+      #     ls
+      # - name: Upload Test Report
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: test-report-${{ env.DATE_STR }}
+      #     path: ./TestResults/${{ env.DATE_STR }}
 
       - name: Send email with SparkPost
         env:
@@ -57,4 +57,6 @@ jobs:
           TO_EMAIL_1: "sivakumar.kurnool@xebia.com"
           TO_EMAIL_2: "venu.thota@xebia.com"
           DATE_STR: ${{ env.DATE_STR }}
-        run: python3 send_email_sparkpost.py
+        run: |
+          echo $SPARKPOST_SMTP_HOST $SPARKPOST_SMTP_PORT $SPARKPOST_SMTP_USERNAME $SPARKPOST_SMTP_PASSWORD
+          # python3 send_email_sparkpost.py
